# liftboy

./: .gitignore  README.md  pyproject.toml
client/: api_client.py  config.py  main.py  scanner.py  tui.py  uploader.py
client/providers/: base.py  generic_provider.py  mcap_provider.py
config/: client.example.toml  server.example.toml
server/: config.py  crud.py  database.py  main.py  models.py
server/api/: health.py  recordings.py
server/templates/: base.html  dashboard.html
shared/: models.py
