[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "liftboy"
version = "0.1.0"
description = "Robotics sensor recording lifecycle manager"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "tomli>=2.0; python_version<'3.11'",
    "httpx>=0.27",
    "rich>=13.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "jinja2>=3.1",
    "mcap>=1.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio", "httpx", "ruff", "mypy"]

[project.scripts]
liftboy-client = "client.main:main"
liftboy-server = "server.main:run"

[tool.hatch.build.targets.wheel]
packages = ["shared", "client", "server"]

[tool.ruff]
line-length = 100
target-version = "py310"
